# farmgame

./: .gitignore  CHANGES.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  config.py  main.py  pyproject.toml  run.sh  test_e2e_keyboard.py  test_game.py
models/: __init__.py  crop.py  farm.py  player.py
screens/: __init__.py
styles/: farmgame.tcss
systems/: __init__.py  save_system.py
widgets/: __init__.py  farm_grid.py  plot.py  sidebar.py
