[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "farmgame"
version = "0.1.0"
description = "ADHD-friendly terminal farming game"
authors = [{name = "faka"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
include = ["models*", "systems*", "widgets*", "screens*", "styles*"]

[tool.setuptools]
py-modules = ["main", "config"]

[project.scripts]
farm = "main:main"
farmgame = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
